# encoder-compressor-benchmark

./: .gitignore  README.md  pyproject.toml
encoder_compressor_benchmark/: main.py  select_config.py  select_from_list.py  table.py
encoder_compressor_benchmark/compressors/: __init__.py  base.py  bz2.py  gzip.py  lzma.py  zlib.py  zstd.py
encoder_compressor_benchmark/encoders/: __init__.py  base.py  bencode.py  bson.py  cbor.py  json.py  marshal.py  msgpack.py  pickle.py  ujson.py  yaml.py
tests/: test_compressors.py  test_encoders.py  test_json_gzip_vs_msgpack.py
