[tool.poetry]
name = "encoder-compressor-benchmark"
version = "0.1.0"
description = ""
authors = ["Martin Lehoux <martin@lehoux.net>"]

[tool.poetry.dependencies]
python = "^3.7"
msgpack = "^1.0.0"
humanize = "^1.0.0"
zstd = "^1.4.4"
terminaltables = "^3.1.0"
pyyaml = "^5.3"
pyinquirer = "^1.0.3"
ujson = "^1.35"
bson = "^0.5.9"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
flake8 = "^3.7.9"
coverage = "^5.0.3"

[tool.poetry.scripts]
main = "encoder_compressor_benchmark.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
